k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: denty
  namespace: denty
spec:
  type: ClusterIP
  selector:
    app: denty
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
